# bytebeam

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: client.rs  main.rs  server.rs
src/client/: compression.rs  download.rs  mod.rs  token.rs  upload.rs
src/server/: appstate.rs  keymanager.rs  mod.rs  server.rs  serveropts.rs
src/utils/: compression.rs  metadata.rs  mod.rs
