[package]
name = "ByteBeam"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
axum = { version = "0.8.1", features = ["form", "json", "macros", "multipart"] }
bytesize = "1.3.2"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive", "env"] }
dotenv = "0.15.0"
indicatif = "0.17.11"
maud = { version = "0.27.0", features = ["axum"] }
qr2term = "0.3.3"
rand = { version = "0.9.0", features = ["alloc"] }
reqwest = { version = "0.12.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
urlencoding = "2.1.3"

[[bin]]
name = "beam"
path = "src/main.rs"
