[package]
name = "ByteBeam"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
bytesize = "1.3.2"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive", "env"] }
dotenv = "0.15.0"
indicatif = "0.17.11"
qr2term = "0.3.3"
reqwest = { version = "0.12.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
urlencoding = "2.1.3"
bytes = "1.10.0"
toml = "0.8.20"
shellexpand = "3.1.0"
rand = { version = "0.9.0", features = ["alloc"], optional = true }
axum = { version = "0.8.1", features = ["form", "json", "macros", "multipart"], optional = true }
anyhow = {version = "1.0.95", optional = true }
maud = { version = "0.27.0", features = ["axum"], optional = true }

[features]
server = ["anyhow", "axum", "maud", "rand"]

[[bin]]
name = "beam"
path = "src/main.rs"
